Fixed h2 console on aws ec2 browser access

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 # when application start up it will create database tables
 spring.jpa.hibernate.ddl-auto=create
+spring.h2.console.settings.web-allow-others=true
