Added TryEasy Application
Login
Signup
Employee: registration, bulkupload, list all employee
Participant: registration, list all participants
Organization: registration
Accounts: registration
Authorities: registration, bulkupload

--- a/build.gradle
+++ b/build.gradle
@@ -11,15 +11,41 @@ java {
 	sourceCompatibility = '17'
 }
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'com.h2database:h2'
+
+	//WEB
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	//DATABASE
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'org.postgresql:postgresql'
+
+	//SECURITY
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
+
+	//TEST
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//EXTERNAL LIBRARY
+	implementation 'com.opencsv:opencsv:5.8'
+
+	//DEV TOOLS
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
 }
 
 tasks.named('test') {
