--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,23 @@
 server.port=9000
-spring.datasource.url=jdbc:h2:mem:recordkeeping
-spring.datasource.username=sa
-spring.datasource.password=bunty
-# to access h2 database on browser
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+# To access h2 database on browser
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 # when application start up it will create database tables
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.settings.web-allow-others=true
+# Display all query
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+# Thymeleaf internationalization
+spring.messages.basename=Recordkeeping
+# Initialize schema and data
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+# Enable logging for spring security
+#logging.level.org.springframework.security=DEBUG
+# Limit the size of the file
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
