--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.messages.basename=Recordkeeping
 # Limit the size of the file
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+# STRIPE DETAILS
+tryeasy.stripe.key.public=${STRIPE_PUBLIC_KEY}
+tryeasy.stripe.key.secret=${STRIPE_SECRET_KEY}
